--- a/src/pages/assignments/assignment-01.astro
+++ b/src/pages/assignments/assignment-01.astro
@@ -236,6 +236,7 @@ nav{
     align-items: center;
   }
 
+
   #hike .btn-cta{
     display: flex;
     flex-wrap: wrap;
@@ -255,5 +256,94 @@ nav{
     display: flex;
     flex-direction: row-reverse;
     justify-content: center;
+  }
+
+  #paddle .btn-cta{
+    display: flex;
+    flex-wrap: wrap;
+    border: solid 2px #3A6EA5 ;
+    border-radius: 8px;
+    width: 197px;
+    padding: 8px 16px;
+    margin: 10px;
+  }
+
+  #bike{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+    #bike .btn-cta{
+    display: flex;
+    flex-wrap: wrap;
+    border: solid 2px #3A6EA5 ;
+    border-radius: 8px;
+    width: 185px;
+    padding: 8px 16px;
+    margin: 10px;
+  }
+
+  .explore{
+    padding: 64px;
+    display: flex;
+    justify-content: center;
+    background-color: ;
+  }
+
+  .big-text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 761px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 36px;
+    font-style: italic;
+  }
+
+  .places-grid{
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    row-gap: 10px;
+    column-gap: 10px;
+    padding-bottom: 64px;
+    width: fit-content;
+    position: relative;
+    left: 190px;
+  }
+
+  .places-tile{
+   background-color: #FFD1A8;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: auto;
+    max-width: 200px;
+  }
+
+  .places-name{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 0%;
+    margin: 0%;
+    height: auto;
+    width: auto;
+  }
+
+  .places-location{
+    font-size: 16px;
+    margin: 0%;
+    padding: 0%;
+    height: auto;
+    width: auto;
   }
 </style>
