explore class background color

--- a/src/pages/assignments/assignment-01.astro
+++ b/src/pages/assignments/assignment-01.astro
@@ -288,7 +288,7 @@ nav{
     padding: 64px;
     display: flex;
     justify-content: center;
-    background-color: ;
+    background-color: #F2F2F0;
   }
 
   .big-text{
