--- a/src/pages/assignments/assignment-01.astro
+++ b/src/pages/assignments/assignment-01.astro
@@ -166,7 +166,7 @@ export const pageTitle = "Assignment 01";
   /* importing fonts */
   @import url("https://fonts.googleapis.com/css2?family=Bree+Serif&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
-nav{
+  nav{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -287,8 +287,11 @@ nav{
   .explore{
     padding: 64px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
     background-color: #F2F2F0;
+    width: 889px;
   }
 
   .big-text{
@@ -310,8 +313,6 @@ nav{
     column-gap: 10px;
     padding-bottom: 64px;
     width: fit-content;
-    position: relative;
-    left: 190px;
   }
 
   .places-tile{
@@ -337,6 +338,7 @@ nav{
     margin: 0%;
     height: auto;
     width: auto;
+    color: black;
   }
 
   .places-location{
@@ -345,5 +347,6 @@ nav{
     padding: 0%;
     height: auto;
     width: auto;
+    color: black;
   }
 </style>
