--- a/src/pages/assignments/assignment-01.astro
+++ b/src/pages/assignments/assignment-01.astro
@@ -291,13 +291,9 @@ export const pageTitle = "Assignment 01";
     justify-content: center;
     align-items: center;
     background-color: #F2F2F0;
-    width: 889px;
   }
 
   .big-text{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 761px;
     text-align: center;
     font-weight: bold;
@@ -306,47 +302,36 @@ export const pageTitle = "Assignment 01";
   }
 
   .places-grid{
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    row-gap: 10px;
-    column-gap: 10px;
-    padding-bottom: 64px;
-    width: fit-content;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+    align-items: stretch;
   }
 
   .places-tile{
    background-color: #FFD1A8;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    height: 100px;
+    width: 200px;
     text-align: center;
-    height: auto;
-    max-width: 200px;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   .places-name{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    width: 200px;
     font-size: 20px;
     font-weight: bold;
-    padding: 0%;
-    margin: 0%;
-    height: auto;
-    width: auto;
     color: black;
   }
 
   .places-location{
     font-size: 16px;
-    margin: 0%;
-    padding: 0%;
-    height: auto;
-    width: auto;
     color: black;
+  }
+
+  .places-tile p{
+  margin-top: 0%;
   }
 </style>
