--- a/src/pages/assignments/assignment-01.astro
+++ b/src/pages/assignments/assignment-01.astro
@@ -185,6 +185,7 @@ export const pageTitle = "Assignment 01";
   background-color: #174A28;
   padding: 8px 16px;
   border-radius: 4px;
+  text-decoration: none;
 }
 
 .section-hero{
@@ -302,8 +303,10 @@ export const pageTitle = "Assignment 01";
   }
 
   .places-grid{
+   display: grid;
+    grid-template-columns: 10px;
+    grid-template-rows: 10px;
     display: flex;
-    flex-wrap: wrap;
     gap: 10px;
     justify-content: center;
     align-items: stretch;
@@ -318,17 +321,20 @@ export const pageTitle = "Assignment 01";
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
   }
 
   .places-name{
     font-size: 20px;
     font-weight: bold;
     color: black;
+    margin: 0%;
   }
 
   .places-location{
     font-size: 16px;
     color: black;
+    margin: 0%;
   }
 
   .places-tile p{
