fix grid layout

--- a/src/pages/assignments/assignment-01.astro
+++ b/src/pages/assignments/assignment-01.astro
@@ -303,10 +303,9 @@ export const pageTitle = "Assignment 01";
   }
 
   .places-grid{
-   display: grid;
-    grid-template-columns: 10px;
-    grid-template-rows: 10px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     gap: 10px;
     justify-content: center;
     align-items: stretch;
@@ -314,7 +313,7 @@ export const pageTitle = "Assignment 01";
 
   .places-tile{
    background-color: #FFD1A8;
-    height: 100px;
+    height: auto;
     width: 200px;
     text-align: center;
     text-decoration: none;
