changed type on starting site page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,9 +3,9 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Home">
-  <h1>Welcome!</h1>
-  <p>This is your Design for the Web 2 starter site.</p>
+  <h1>Welcome! (Whether it's me doing more coding or someone checking out my site)</h1>
+  <p>This is my [purple]Design for the Web 2 starter site.</p>
   <p>
-    Feel free to start editing this page in <code>src/pages/index.astro</code>
+    Feel free to continue editing this page in <code>src/pages/index.astro</code>
   </p>
 </Layout>
