--- a/src/pages/assignments/assignment-01-responsive.astro
+++ b/src/pages/assignments/assignment-01-responsive.astro
@@ -177,7 +177,7 @@ export const pageTitle = "Assignment 01-responsive";
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 8px 240px;
+  padding: 8px 120px;
   width: 100%;
   background-color: #F2F2F0;
   }
@@ -222,19 +222,20 @@ export const pageTitle = "Assignment 01-responsive";
   }
 
   #hike{
-    display: flex;
-    flex-wrap: wrap;
     justify-content: center;
 
   }
 
   .section-text-panel{
     background-color: #F2F2F0;
-    width: 50%;
+    width: 100%;
     height: 500px;
     padding: 32px;
     margin: 0;
     gap: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   h2, p, .btn-cta{
@@ -257,12 +258,10 @@ export const pageTitle = "Assignment 01-responsive";
 
   .section-image{
     height: 500px;
-    width: 50%;
+    width: 100%;
   }
 
   #paddle{
-    display: flex;
-    flex-direction: row-reverse;
     justify-content: center;
   }
 
