change h1 type and style

--- a/src/pages/assignments/Project 1 Proposal.astro
+++ b/src/pages/assignments/Project 1 Proposal.astro
@@ -4,7 +4,7 @@ export const pageTitle = "Project 1 Proposal";
 ---
 
 <Layout title={pageTitle}>
-  <h1>Sample Assignment</h1>
+  <h1>Project 1 Proposal</h1>
   <p>You can use this file as a template for your assignments.</p>
   <p>
     There are two possible layouts for assignment pages - normal and compact.
@@ -24,6 +24,6 @@ export const pageTitle = "Project 1 Proposal";
 
 <style>
   h1 {
-    color: blue;
+    color: black;
   }
 </style>
