list type and style change, also added images

--- a/src/pages/assignments/Project 1 Proposal.astro
+++ b/src/pages/assignments/Project 1 Proposal.astro
@@ -5,25 +5,24 @@ export const pageTitle = "Project 1 Proposal";
 
 <Layout title={pageTitle}>
   <h1>Project 1 Proposal</h1>
-  <p>You can use this file as a template for your assignments.</p>
-  <p>
-    There are two possible layouts for assignment pages - normal and compact.
-    Normal layout features the navigation panel along the left side of the
-    screen, while compact layout makes the navigation collapse into a menu
-    button on the right side of the screen. You can enable the compact layout by
-    adding the <code>compact</code> prop to the Layout component:
-  </p>
-  <pre><code>&lt;Layout compact title="Page Title"&gt;</code></pre>
-  <p>
-    In Astro, we usually write styling in a <code>&lt;style&gt;</code> tag within
-    each component file. This lets us keep the styles for each component together
-    with the component itself. Styles that are written in one component will not
-    affect other components or pages, even if you use the same class names.
-  </p>
+  <ul>
+    <li>Pokemon (It's never failed me before)</li>
+    <img src="https://en.meming.world/images/en/6/6e/Surprised_Pikachu.jpg" alt="Surprised Pikachu">
+    <li>Breakfast food tier list</li>
+   <img src="https://pbs.twimg.com/media/D7C7NBhW0AATP3P.jpg:large" alt="Breakfast">
+    <li>Why the old library should have a pancake maker</li>
+    <img src="https://images.squarespace-cdn.com/content/v1/628b909667040d3af75cdca3/768775d5-2abe-4780-abd5-8b1291719e4d/Popcake_Touchless-Pancake-Machine.jpg" alt="automatic pancake maker">
+    <li>Memes and why everyone should use them</li>
+    <img src="https://i.ytimg.com/vi/wRnIeckoF5A/maxresdefault.jpg" alt="Memes">
+  </ul>
 </Layout>
 
 <style>
   h1 {
     color: black;
+  }
+  li{
+    font-size: larger;
+    font-weight: bold;
   }
 </style>
