insert images into start page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Home">
   <h1>Welcome! (Whether it's me doing more coding or someone checking out my site)</h1>
-  <p>This is my [purple]Design for the Web 2 starter site.</p>
-  <p>
-    Feel free to continue editing this page in <code>src/pages/index.astro</code>
-  </p>
+  <p>This is my [purple]Design for the Web 2 starter site and i'm having all the fun.</p>
+  <img src="https://i.ytimg.com/vi/q1YdkHQ3sdM/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBYmtjjMOdfm3DPol7-2oVB6yVVug" alt="abk">
+  <img src="https://media.tenor.com/SETDXWcfo-QAAAAj/deltarune-tenna.gif" alt="tenna">
 </Layout>
