added list type

--- a/src/pages/assignments/Project 1 Proposal.astro
+++ b/src/pages/assignments/Project 1 Proposal.astro
@@ -8,8 +8,9 @@ export const pageTitle = "Project 1 Proposal";
   <ul>
     <li>Pokemon (It's never failed me before)</li>
     <img src="https://en.meming.world/images/en/6/6e/Surprised_Pikachu.jpg" alt="Surprised Pikachu">
+    <li>Pokemon that taste good vs. pokemon that would taste bad</li>
     <li>Breakfast food tier list</li>
-   <img src="https://pbs.twimg.com/media/D7C7NBhW0AATP3P.jpg:large" alt="Breakfast">
+    <img src="https://pbs.twimg.com/media/D7C7NBhW0AATP3P.jpg:large" alt="Breakfast">
     <li>Why the old library should have a pancake maker</li>
     <img src="https://images.squarespace-cdn.com/content/v1/628b909667040d3af75cdca3/768775d5-2abe-4780-abd5-8b1291719e4d/Popcake_Touchless-Pancake-Machine.jpg" alt="automatic pancake maker">
     <li>Memes and why everyone should use them</li>
