removed width from .big-text

--- a/src/pages/assignments/assignment-01-responsive.astro
+++ b/src/pages/assignments/assignment-01-responsive.astro
@@ -301,7 +301,6 @@ export const pageTitle = "Assignment 01-responsive";
   }
 
   .big-text{
-    width: 761px;
     text-align: center;
     font-weight: bold;
     font-size: 36px;
@@ -310,9 +309,10 @@ export const pageTitle = "Assignment 01-responsive";
 
   .places-grid{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     gap: 10px;
+    display: flex;
     justify-content: center;
     align-items: stretch;
   }
