removed padding on nav

--- a/src/pages/assignments/assignment-01-responsive.astro
+++ b/src/pages/assignments/assignment-01-responsive.astro
@@ -177,7 +177,7 @@ export const pageTitle = "Assignment 01-responsive";
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 8px 120px;
+  padding: 8px;
   width: 100%;
   background-color: #F2F2F0;
   }
