--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,15 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Button from "@components/Button.astro";
 ---
 
 <Layout title="Home">
   <section class="starting-point">
     <h1>Welcome! (Whether it's me doing more coding or someone checking out my site)</h1>
     <h2>This is my [purple]Design for the Web 2 starter site.</p>
+    <Button />
   </section>
+   
   <section class:"images" id="memes">
   <img src="https://media.tenor.com/SETDXWcfo-QAAAAj/deltarune-tenna.gif" alt="tenna dancing" class="tenna1"> 
   <img src="https://i.ytimg.com/vi/q1YdkHQ3sdM/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBYmtjjMOdfm3DPol7-2oVB6yVVug" alt="abk" class="abk">
