button style change

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -3,3 +3,17 @@
 ---
 
 <a class="btn-home" href="/">Go Home</a>
+
+<style>
+    .btn-home{
+        display: block;
+        text-decoration: none;
+        background-color: red;
+        color: white;
+        padding: 1rem;
+        border-radius: .5rem;
+    }
+    .btn-home:hover{
+        background-color: maroon;
+    }
+</style>
