--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Button from "@components/Button.astro";
+import Frame from "@components/Frame.astro"
 ---
 
 <Layout title="Home">
@@ -8,6 +9,7 @@ import Button from "@components/Button.astro";
     <h1>Welcome! (Whether it's me doing more coding or someone checking out my site)</h1>
     <h2>This is my [purple]Design for the Web 2 starter site.</p>
     <Button />
+    <Frame />
   </section>
    
   <section class:"images" id="memes">
