added const {title} to frame.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Frame from "@components/Frame.astro"
     <h1>Welcome! (Whether it's me doing more coding or someone checking out my site)</h1>
     <h2>This is my [purple]Design for the Web 2 starter site.</p>
     <Button />
-    <Frame />
+    <Frame title="ABK"/>
   </section>
    
   <section class:"images" id="memes">
