--- a/src/components/Frame.astro
+++ b/src/components/Frame.astro
@@ -1,8 +1,11 @@
 ---
+
+const {title} = Astro.props;
+
 ---
 
 <div class="Frame">
-    <h3>My Frame</h3>
+    <h3>{title}</h3>
     <div class="frame-contents">
     <slot />
 </div>
