fram.astro style change

--- a/src/components/Frame.astro
+++ b/src/components/Frame.astro
@@ -26,6 +26,6 @@ const {title} = Astro.props;
         position: relative;
         border-radius: .5rem;
         left: -.5rem;
-        top: -,5rem;
+        top: -1rem;
     }
 </style>
