added sections to project 1 page

--- a/src/pages/assignments/Project 1.astro
+++ b/src/pages/assignments/Project 1.astro
@@ -4,7 +4,19 @@ export const pageTitle = "Project 1";
 ---
 
 <Layout title={pageTitle}>
-  <h1>Memes</h1>
-  
+  <div class="page-container">
+    <header>
+      <h1 class="header-start">Why the Old Library Should Have a Pancake Maker</h1>
+    </header>
+    <section class="pancake-reason">
+      <h2>This is a Good Idea, Trust Me</h2>
+    </section>
+    <section class="how-to">
+      <h2>How it Would Work</h2>
+    </section>
+    <section class="alternatives">
+      <h2>Other Options</h2>
+    </section>
+  </div>
 </Layout>
 
