--- a/src/components/Dropdown.astro
+++ b/src/components/Dropdown.astro
@@ -2,16 +2,39 @@
 const {title} = Astro.props
 ---
 
-<button class="Dropdown">{title}</button>
-<div class="panel">
-    <p>If this text pops out, good jop</p>
-</div>
-
+<details>
+    <summary>{title}</summary>
+   <div class="element">
+    <p>If this text pops out, good job</p>
+   </div>
+    
+</details>
 <style>
-    .Dropdown{
+    summary{
         background-color: lightgray;
+        width: 50%;
+        border: 2px solid black;
+        border-radius: 1rem;
+        padding: 16px;
+        cursor: pointer;
+        text-align: left;
     }
-    .Dropdown:hover{
-        background-color: gray;
+    details[open] summary{
+        border-bottom: 1px solid black;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+    .element{
+        background-color: lightgray;
+        border: 2px solid black;
+        border-top: 0;
+        border-bottom-left-radius: 1rem;
+        border-bottom-right-radius: 1rem;
+        padding: 16px;
+        margin: 0;
+        width: 50%;
+    }
+    p{
+        margin: 0;
     }
 </style>
