--- a/src/pages/assignments/Project 1.astro
+++ b/src/pages/assignments/Project 1.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 export const pageTitle = "Project 1";
+import Dropdown from "@components/Dropdown.astro";
 ---
 
 <Layout title={pageTitle}>
@@ -17,6 +18,7 @@ export const pageTitle = "Project 1";
     <section class="alternatives">
       <h2>Other Options</h2>
     </section>
+    <Dropdown title="Pancakes"/>
   </div>
 </Layout>
 
