Added project layout link

--- a/src/pages/assignments/Project 1.astro
+++ b/src/pages/assignments/Project 1.astro
@@ -19,6 +19,7 @@ import Dropdown from "@components/Dropdown.astro";
       <h2>Other Options</h2>
     </section>
     <Dropdown title="Pancakes"/>
+    <a href="https://docs.google.com/document/d/13C7-kCTTVSB57x2g9iaKjl_Z_AjSTDTd_xHipEpWDtE/edit?tab=t.0">Project Layout</a>
   </div>
 </Layout>
 
