added {title} and slot to dropdown and accordian components

--- a/src/components/Dropdown.astro
+++ b/src/components/Dropdown.astro
@@ -5,7 +5,7 @@ const {title} = Astro.props
 <details>
     <summary>{title}</summary>
    <div class="element">
-    <p>If this text pops out, good job</p>
+    <slot />
    </div>
     
 </details>
