--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,10 @@ import Accordian from "@components/Accordian.astro";
     <h2>This is my [purple]Design for the Web 2 starter site.</p>
     <Button />
     <Frame title="ABK"/>
-    <Accordian />
+    <Accordian title="Sample">
+      <p>Here is some content</p>
+    </Accordian>
+
   </section>
    
   <section class:"images" id="memes">
