--- a/src/components/Accordian.astro
+++ b/src/components/Accordian.astro
@@ -3,5 +3,23 @@ const {title} = Astro.props
 ---
 <details>
     <summary>{title}</summary>
-    <slot />
+        <div class="accordian-content">
+            <slot />
+        </div>
 </details>
+
+<style>
+    details{
+        border: 3px solid black;
+        border-radius: .5rem;
+        max-width: 60em;
+        background-color: skyblue;
+    }
+     summary{
+        padding: 1rem;
+    }
+    .accordian-content{
+        padding: 1rem;
+        margin-top: 0;
+    }
+</style>
