--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Button from "@components/Button.astro";
 import Frame from "@components/Frame.astro"
 
 import Accordian from "@components/Accordian.astro";
+import {Content as SampleContent} from "../components/markdown/sample-content.md"
 ---
 
 <Layout title="Home">
@@ -15,6 +16,7 @@ import Accordian from "@components/Accordian.astro";
     <Accordian title="Sample">
       <p>Here is some content</p>
     </Accordian>
+    <SampleContent/>
 
   </section>
    
