did a thing i don't remember doing

--- a/src/pages/assignments/Project 1.astro
+++ b/src/pages/assignments/Project 1.astro
@@ -18,7 +18,8 @@ import Dropdown from "@components/Dropdown.astro";
     <section class="alternatives">
       <h2>Other Options</h2>
     </section>
-    <Dropdown title="Pancakes"/>
+    <Dropdown title="Pancakes">
+    </Dropdown>
     <a href="https://docs.google.com/document/d/13C7-kCTTVSB57x2g9iaKjl_Z_AjSTDTd_xHipEpWDtE/edit?tab=t.0">Project Layout</a>
   </div>
 </Layout>
