--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Button from "@components/Button.astro";
 import Frame from "@components/Frame.astro"
 
 import Accordian from "@components/Accordian.astro";
-import {Content as SampleContent} from "../components/markdown/sample-content.md"
+import {Content as CustomMarkdown} from "../components/markdown/Pokemon-Food.md"
 ---
 
 <Layout title="Home">
@@ -16,7 +16,7 @@ import {Content as SampleContent} from "../components/markdown/sample-content.md
     <Accordian title="Sample">
       <p>Here is some content</p>
     </Accordian>
-    <SampleContent/>
+    <CustomMarkdown/>
 
   </section>
    
