--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Frame from "@components/Frame.astro"
 
 import Accordian from "@components/Accordian.astro";
 import {Content as CustomMarkdown} from "../components/markdown/Pokemon-Food.md"
+import AgeChecker from "@components/AgeChecker.astro";
 ---
 
 <Layout title="Home">
@@ -25,7 +26,7 @@ import {Content as CustomMarkdown} from "../components/markdown/Pokemon-Food.md"
   <img src="https://i.ytimg.com/vi/q1YdkHQ3sdM/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBYmtjjMOdfm3DPol7-2oVB6yVVug" alt="abk" class="abk">
   <img src="https://media.tenor.com/SETDXWcfo-QAAAAj/deltarune-tenna.gif" alt="tenna dancing" class="tenna2">
   </section>
-  
+  <AgeChecker birthYear = "2004" />
 
 <style>
   .starting-point{
