--- a/src/components/JavaComponent.astro
+++ b/src/components/JavaComponent.astro
@@ -1,3 +1,9 @@
 ---
+import Button from "./Button.astro";
+
+const {color} = Astro.props;
+let fdColor = 'black';
+let bgColor = 'lightgray';
 
 ---
+<button>Click me</button>
