--- a/src/pages/assignments/theme-practice.astro
+++ b/src/pages/assignments/theme-practice.astro
@@ -2,10 +2,11 @@
 import Layout from "src/layouts/Layout.astro";
 export const pageTitle = "ColorThemes"
 import Dropdown from "@components/Dropdown.astro";
+
 ---
 
 <Layout>
-    <h1>Color Themes</h1>
+    <h1 class="colors">Color Themes</h1>
     <button id="btnDark">Dark Mode</button>
     <button id="btnLight">Light Mode</button>
     <p>We're no strangers to love
@@ -66,13 +67,13 @@ btnLight.addEventListener('click', setLight);
 body{
     background-color: var(--color-bg);
 }
-*{
+p{
     color: var(--color-fg);
 }
 button{
     color: var(--color-accent);
 }
-h1{
+.colors{
     color: var(--color-title);
 }
 img{
